[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Level/game_area_background.png" type="Texture" id=1]
[ext_resource path="res://Game/Level/GameArea/GameArea.gd" type="Script" id=2]
[ext_resource path="res://Assets/Level/cell.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Level/success.wav" type="AudioStream" id=4]

[node name="GameArea" type="Node2D"]
script = ExtResource( 2 )

[node name="Sound" type="Node" parent="."]

[node name="CellSound" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 3 )

[node name="LevelCompleteSound" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 4 )

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Background" type="Sprite" parent="BackgroundLayer"]
position = Vector2( 64, 64 )
texture = ExtResource( 1 )
